# analysis-mcp

./: .gitignore  analysis_client.py  analysis_server.py  pyproject.toml
data/: generate_sales.py
