[project]
name = "analysis-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.1.0",
    "fastmcp>=2.3.3",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pydantic>=2.11.4",
    "pydantic-ai>=0.2.0",
    "uvicorn>=0.34.2",
]
